--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "tailwind-template",
-  "version": "0.1.0",
-  "private": true,
+  "name": "wysiaim",
+  "version": "1.0.0",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -14,10 +13,10 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.7",
+    "autoprefixer": "^10.4.8",
     "eslint": "8.20.0",
     "eslint-config-next": "12.2.3",
-    "postcss": "^8.4.14",
-    "tailwindcss": "^3.1.6"
+    "postcss": "^8.4.16",
+    "tailwindcss": "^3.1.8"
   }
 }
