--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "wysiaim",
   "version": "1.0.0",
   "scripts": {
-    "install": "npm install",
+    "install": "npm update",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
